# movie-storage

./: .gitignore  CONFIG_UPDATE.md  PROJECT_SUMMARY.md  README.md  docker-compose.yml  requirements.txt  start.sh  start_backend.sh  start_local.sh  test_db_connection.py  test_frontend_api.sh
backend/: .env.example  .gitignore  ASYNC_CONVERSION_REPORT.md  Dockerfile  README.md  SETUP.md  alembic.ini  auth.py  cast_service.py  check_db_structure.py  check_real_db.py  create_test_user.py  database.py  init_db.py  main.py  makefile  models.py  pyproject.toml  requirements.txt  reset_users.py  run.py  run_sync.py  schemas.py  search_service.py  simple_start.py  test_api.py  test_api_login.py  test_auth_me.py  test_basic.py  test_endpoints.py  test_import.py  test_login.py  test_models.py  test_password_verification.py  test_postgresql_connection.py  update_database_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py  auth.py  cast.py  favorites.py  movies.py
backend/app/core/: config.py  database.py  redis.py  security.py
backend/app/models/: __init__.py  base.py  favorite.py  movie.py  user.py
backend/app/schemas/: __init__.py  auth.py  base.py  favorite.py  movie.py  user.py
backend/app/services/: cast_service.py  search_service.py
backend/migrations/: __init__.py  env.py
backend/tests/: conftest.py  test_auth.py  test_movies.py
frontend/: .env.example  BUG_FIXES_REPORT.md  Dockerfile  FINAL_UI_UPDATE.md  UI_REDESIGN_REPORT.md  UI_UPDATE_REPORT.md  package-lock.json  package.json  test_api.js
frontend/public/: index.html
frontend/src/: App.js  index.css  index.js
frontend/src/components/: Header.js
frontend/src/contexts/: AuthContext.js
frontend/src/pages/: Favorites.js  Home.js  Login.js  MovieDetail.js  Profile.js  Search.js  Upload.js
frontend/src/services/: api.js
frontend/src/styles/: components.css
